# tickets-e2e

./: .gitignore  API_TOKENS_GUIDE.md  BUG_TRACKER_README.md  DEPLOYMENT_SUMMARY.md  README.md  auto_cleanup_slack.py  aws_sso_setup.md  bug_linker.py  bugtracker_dashboard.json  cleanup_all_slack_records.py  cleanup_slack_records.py  cleanup_slack_without_author.py  cloudformation-template.yaml  complete_db_cleanup.py  comprehensive_slack_cleanup.py  delete_all_slack_records.py  delete_slack_with_author.py  deploy-lambda.sh  deploy.sh  deploy_bug_tracker.sh  deploy_bug_tracker_awscli.sh  deploy_complete.sh  dynamodb-policy.json  dynamodb_data_storage.py  grafana_dynamodb_setup.md  grafana_setup_guide.md  ingestion_updated_code.json  next.config.js  payload.json  payload_b64.txt  pyproject.toml  requirements.txt  requirements_timestream.txt  response.json  scheduler.py  setup_grafana.sh  strict_slack_cleanup.py  support-data-ingestion.py  support_dashboard.json  table-definition.json  (+2 more)
aws_deployment/: Dockerfile.ingestion  docker-compose.yml
config/: parameters.json
dashboard/: README.md  deploy.sh  index.html  package.json  server.js
events/: ingestion-event.json  linker-event.json  query-event.json
frontend/: realtime-client.js  realtime-styles.css
infrastructure/: template-simple.yaml  template.yaml
pages/: _app.tsx  index.tsx
sam/: README.md  deploy.sh  template.yaml
simple-dashboard/: README.md  bucket-policy.json  deploy-simple.sh  index.html  package.json  server.js
src/: app.py  bug_tracker_ingestion.py  bug_tracker_query.py  bug_tracker_realtime.py  (+2 more)
(+22 files in other folders)
